# cli-procedural-openworld

./: .gitignore  Block.c  Block.h  CMakeLists.txt  CMakePresets.json  Camera.c  Camera.h  Chicken.c  Chicken.h  Chiken.c  Chiken.h  Chunk.c  Chunk.h  Constant.h  Coordinate.h  Entity.c  Entity.h  Inventory.c  Inventory.h  Menu.c  Menu.h  PerlinNoise.c  PerlinNoise.h  Player.c  Player.h  README.md  Rendering.c  Rendering.h  Tilemap.c  Tilemap.h  a.out  main.c  makefile  map.txt  saved_chunks  test.c
